<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileCourseWork</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="hybrid">Hybrid</string>
    <string name="terrain">Terrain</string>
    <string name="normal">Normal</string>
    <string name="history">History</string>
    <string name="enter">Enter</string>

</resources>
